// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component decorated 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0 {
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-transform: none;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component resized 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 2.875rem;
  line-height: 4rem;
}

.c0 {
  text-transform: none;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component text transformed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0 {
  text-transform: uppercase;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component weight 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
}

.c0 {
  text-transform: none;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component with color 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  color: #49a9f2;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0 {
  text-transform: none;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component with variant 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0 {
  text-transform: none;
  color: #CC1F36;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A Text component wrapped 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0 {
  text-transform: none;
  overflow-wrap: break-word;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;

exports[`A default Text component 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-animation: none;
  animation: none;
  font-size: 1rem;
  line-height: 1.5rem;
}

.c0 {
  text-transform: none;
}

<span
  className="c0 c1"
>
  Hello
</span>
`;
